@@ -45,6 +45,7 @@ t/25add_subtract.t
 t/26dt_leapsecond_pm.t
 t/27delta.t
 t/28dow.t
+t/29overload.t
 t/99-pod.t
 t/testlib.pl
 tools/leap_seconds_header.pl
