@@ -1,0 +1,20 @@
+#!/usr/bin/perl -w
+
+use strict;
+
+use Test::More tests => 2;
+
+use DateTime;
+
+{
+    my $dt = DateTime->new( year => 1900, month => 12, day => 1 );
+
+    is( "$dt", '1900-12-01T00:00:00', 'stringification overloading' );
+}
+
+{
+    my $dt = DateTime->new( year => 2050, month => 1, day => 15,
+                            hour => 20,   minute => 10, second => 10 );
+
+    is( "$dt", '2050-01-15T20:10:10', 'stringification overloading' );
+}
